# metaflow-flyte

./: .gitignore  Dockerfile  Dockerfile.e2e  Dockerfile.ux  LICENSE  README.md  docker-compose.yml  pyproject.toml  ux_test_config.yaml
.github/workflows/: ci.yml  e2e.yml  ux-tests.yml
metaflow_extensions/flyte/plugins/: mfextinit_flyte.py
metaflow_extensions/flyte/plugins/flyte/: _codegen.py  _graph.py  _types.py  exception.py  flyte_cli.py  flyte_compiler.py  flyte_decorator.py  flyte_deployer.py  flyte_deployer_objects.py
tests/: conftest.py  test_adversarial.py  test_e2e_remote.py  test_graph.py  test_integration.py
tests/flows/: branch_flow.py  condition_flow.py  condition_multi_step_flow.py  config_flow.py  mid_condition_flow.py  mid_foreach_flow.py  resources_flow.py  scheduled_flow.py  timeout_flow.py
ux_flows/: branchflow_prefect.py  catchflow_prefect.py  condition_multi_step_flow.py  configmutableflow_prefect.py  configsimple_prefect.py  foreachflow_prefect.py  helloflow_prefect.py  hellofromdeploymentflow_prefect.py  helloprojectflow_prefect.py  nestedforeachflow_prefect.py  resourcesflow_prefect.py  retryflow_prefect.py  timeoutflow_prefect.py
