[project]
name = "metaflow-flyte"
version = "0.4.2"
description = "Run Metaflow flows as Flyte workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nissan Pow", email = "nissan.pow@gmail.com" }]
keywords = ["metaflow", "flyte", "workflow", "orchestration", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "metaflow>=2.9",
    "flytekit>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-flyte"
Repository = "https://github.com/npow/metaflow-flyte"

[tool.setuptools.packages.find]
include = ["metaflow_extensions*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: local execution tests using pyflyte run (no cluster required)",
    "e2e: requires a running Flyte cluster (docker-compose)",
]
addopts = "--cov=metaflow_extensions --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
source = ["metaflow_extensions"]
omit = ["*/mfextinit_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pyright]
include = ["metaflow_extensions"]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["ux_flows/", "*_flyte.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "C4"]
ignore = [
    "E501",   # line too long — generated code has long lines
    "B008",   # do not perform function calls in default arguments
    "B904",   # raise from None in except blocks
]
